--- a/src/styles/shared/_header.scss
+++ b/src/styles/shared/_header.scss
@@ -1,3 +1,12 @@
+@mixin sharedLogoStyles {
+  max-width: 130px;
+  height: auto;
+  @include media-breakpoint-up(md) {
+    max-width: 190px;
+  }
+}
+
+
 .header__home {
   position: fixed;
   top: 0;
@@ -11,11 +20,7 @@
   .header__logo {
     display: none;
     opacity: 0;
-    max-width: 130px;
-    height: auto;
-    @include media-breakpoint-up(md) {
-      max-width: 150px;
-    }
+    @include sharedLogoStyles();
   }
   &--light {
     .header__logo--dark {
@@ -45,11 +50,8 @@
   bottom: 0;
   border-bottom: 1px solid #eee;
   .header__logo {
-    max-width: 130px;
-    height: auto;
-    @include media-breakpoint-up(md) {
-      max-width: 150px;
-    }
+    @include sharedLogoStyles();
+    
   }
 }
 
@@ -63,10 +65,6 @@
   background-color: #fff;
   border-bottom: 1px solid #eee;
   .header__logo {
-    max-width: 130px;
-    height: auto;
-    @include media-breakpoint-up(md) {
-      max-width: 150px;
-    }
+    @include sharedLogoStyles();
   }
 }
